tests/baselines/reference/duplicateTypeParameters3.errors.txt
==== tests/cases/compiler/duplicateTypeParameters3.ts (1 errors) ====
    interface X {
    x: () => <A, A>() => void;
              ~
!!! duplicateTypeParameters3.ts(2,11): error TS2000: Duplicate identifier 'A'.
    }
     
    